filter form spacing issue fixed and matched with design, filters changed to filter

--- a/src/components/UIComponents/RightInfoPanel/RightInfoPanel.style.scss
+++ b/src/components/UIComponents/RightInfoPanel/RightInfoPanel.style.scss
@@ -51,6 +51,9 @@
   .MuiDrawer-paper {
     width: 566px;
     .right_info_panel_header {
+      h2{
+        flex-grow: 1;
+      }
       .MuiAppBar-root {
         .MuiToolbar-root {
           .MuiIconButton-root {
